--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,7 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": "^8.1",
-    "symfony/dependency-injection": "^7.2",
-    "symfony/config": "^7.2",
-    "symfony/finder": "^7.2"
+    "php": "^8.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.11",
